# rustbucket

./: .gitignore  Cargo.toml  LICENSE  README.md
completions/: .shellcheckrc  README.md
completions/bash/: rtbt.bash
completions/fish/: rtbt.fish
completions/powershell/: _rtbt.ps1
completions/zsh/: _rtbt
docs/: README.md
docs/man/: rtbt.1
packaging/: README.md
packaging/arch/: PKGBUILD  README.md
packaging/homebrew/: README.md  rtbt.rb
packaging/scripts/: test-all.sh  test-arch.sh  test-homebrew.sh
scripts/: generate-completions.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/image/: benchmark.rs  converter.rs  effects.rs  mod.rs  processor.rs
src/palette/: builtin.rs  loader.rs  mod.rs  parser.rs  toml_loader.rs
tests/: README.md  integration_test.rs
